--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
 	<title>Service Worker</title>
 </head>
 <body>
-	Hello!
+<script>
+if ('serviceWorker' in navigator) {
+	window.addEventListener('load', function() {
+			navigator.serviceWorker.register('/sw.js').then(function(registration) {
+			// Registration was successful
+			console.log('ServiceWorker registration successful with scope: ', registration.scope);
+		}).catch(function(err) {
+  			// registration failed :(
+  			console.log('ServiceWorker registration failed: ', err);
+		});
+	});
+}
+</script>
 </body>
 </html>
